--- a/schedule.css
+++ b/schedule.css
@@ -23,10 +23,10 @@ header {
 body {
     font: var(--FS);
     min-height: 100vh;
-    display: flex;
+    /* display: flex; 
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: center; */
     background-color: var(--LIGHT-COLOR);
     color: var(--DARK-COLOR);
     font-family: 'Montserrat';
