--- a/homepage.css
+++ b/homepage.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Montserrat';
 }
 
 :root {
@@ -49,6 +50,11 @@ td {
     overflow: hidden;
 }
 
+main{
+    min-height: 80%;
+    border: 5px solid green;
+}
+
 /* The Modal (background) */
 .modal {
     display: none;
@@ -73,17 +79,31 @@ td {
 
 /* Modal Content/Box */
 .modal-content {
-    align-items: center;
+    border-radius: 35px;
     background-color: #fefefe;
     margin: 15% auto;
     /* 15% from the top and centered */
     padding: 20px;
-    border: 1px solid #888;
+    border: 5px solid #888;
     width: 80%;
-    height: 60%;
+    height: 70%;
     /* Could be more or less, depending on screen size */
 }
 
+.modalHeader{
+    text-align: center;
+}
+
+.form{
+    /* border: 5px solid red; */
+    margin-top: 2rem;
+    min-height: 80%;
+    min-width: 20%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-flow: column nowrap;
+}
 
 /* The Close Button */
 .close {
@@ -98,4 +118,23 @@ td {
     color: black;
     text-decoration: none;
     cursor: pointer;
+}
+
+.medicationList{
+    min-height: 70%;
+    border: 5px solid red;
+}
+
+.deleteButton{
+    width:100%; 
+    height: 40px; 
+    background-color: red; 
+    border: 0px; 
+    border-radius: 5px;
+}
+
+.medListItems{
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
 }
