--- a/homepage.css
+++ b/homepage.css
@@ -126,15 +126,36 @@ main{
 }
 
 .deleteButton{
-    width:100%; 
-    height: 40px; 
-    background-color: red; 
-    border: 0px; 
-    border-radius: 5px;
+    float:right;
 }
 
+.deleteButton:hover{
+    cursor: pointer;
+}
 .medListItems{
+    border: 3px solid #333;
+    border-radius: .3rem;
+    padding: 0.4rem;
+    background-color: white;
+    margin: 0 .8rem 0 .8rem;
+}
+
+.medListDosage{
+    float:right;
+}
+
+.medListScientific{
+    margin-bottom: 1rem;
+}
+
+.medicationHeader{
+    text-align: center;
+    margin-bottom: .5rem;
+}
+
+.myBtn{
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
+    align-items: center;
 }
