--- a/homepage.css
+++ b/homepage.css
@@ -8,7 +8,7 @@
 :root {
     --DARK-COLOR: #333;
     --LIGHT-COLOR: #fff;
-    --FS: clamp(.75rem, 2vw, 2rem);
+    --FS: clamp(.85rem, 2vw, 2rem);
     --MEDIUM-FS: clamp(.75rem, 2.5vw, 2.5rem);
     --GREATER-FS: clamp(1rem, 3.5vw, 3.2rem);
 }
@@ -131,6 +131,7 @@ main{
     background-color: #ab0000;
     border-radius: 5px;
     height: 1.5rem;
+    margin: .2rem;
 }
 
 .deleteButton:hover{
@@ -140,8 +141,9 @@ main{
     border: 3px solid #333;
     border-radius: .3rem;
     padding: 0.4rem;
+    font-size: var(--FS);
     background-color: white;
-    margin: 0 .8rem 0 .8rem;
+    margin: 0 .8rem .8rem .8rem;
     height: 100px;
 }
 
@@ -161,12 +163,21 @@ main{
 .myBtn{
     display: flex;
     flex-flow: column nowrap;
-    justify-content: center;
+    justify-content: center;    
     align-items: center;
 }
 
 
 .dropdown{
     font-size: .7rem;
+    max-width: 80%;
+    font-style: 'Montserrat';
+}
 
+.medListName{
+    font-weight: bold;
+}
+
+.form .inLine input {
+    width: 10%;
 }
